force-app/main/default/objects/Lead/fields/Active_Use__c.field-meta.xml
<CustomField>
    <fullName>Active_Use__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Use?</label>
    <type>Checkbox</type>
</CustomField>