force-app/main/default/objects/Lead/fields/Additional_Comments_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments_Info__c</fullName>
    <label>Additional Comments &amp; Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>