force-app/main/default/objects/Lead/fields/Additional_Gun_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Gun_Info__c</fullName>
    <label>Additional Gun Info</label>
    <type>TextArea</type>
</CustomField>