force-app/main/default/objects/Lead/fields/Additional_Provider_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Provider_Info__c</fullName>
    <label>Additional Provider Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>