force-app/main/default/objects/Lead/fields/Admissions_Location__c.field-meta.xml
<CustomField>
    <fullName>Admissions_Location__c</fullName>
    <label>Admissions Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Connecticut</fullName>
            </value>
            <value>
                <fullName>Florida</fullName>
                <label>Florida - Delray</label>
            </value>
            <value>
                <fullName>Florida - Orlando</fullName>
            </value>
            <value>
                <fullName>Florida - Tampa</fullName>
            </value>
            <value>
                <fullName>Florida - Jacksonville</fullName>
            </value>
            <value>
                <fullName>Georgia</fullName>
            </value>
            <value>
                <fullName>Indiana</fullName>
            </value>
            <value>
                <fullName>Kentucky</fullName>
            </value>
            <value>
                <fullName>Maine</fullName>
            </value>
            <value>
                <fullName>Massachusetts</fullName>
            </value>
            <value>
                <fullName>New Hampshire</fullName>
            </value>
            <value>
                <fullName>Ohio</fullName>
            </value>
            <value>
                <fullName>Rhode Island</fullName>
            </value>
            <value>
                <fullName>Virginia</fullName>
            </value>
            <value>
                <fullName>Other (outside operational states)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>