force-app/main/default/objects/Lead/fields/Admissions_Location_Other__c.field-meta.xml
<CustomField>
    <fullName>Admissions_Location_Other__c</fullName>
    <label>Admissions Location: Other</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Admissions_Location__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alabama</fullName>
            </value>
            <value>
                <fullName>Alaska</fullName>
            </value>
            <value>
                <fullName>Arizona</fullName>
            </value>
            <value>
                <fullName>Arkansas</fullName>
            </value>
            <value>
                <fullName>California</fullName>
            </value>
            <value>
                <fullName>Colorodo</fullName>
            </value>
            <value>
                <fullName>Delaware</fullName>
            </value>
            <value>
                <fullName>Florida-Outside Catchment</fullName>
            </value>
            <value>
                <fullName>Hawaii</fullName>
            </value>
            <value>
                <fullName>Idaho</fullName>
            </value>
            <value>
                <fullName>Illinois</fullName>
            </value>
            <value>
                <fullName>Iowa</fullName>
            </value>
            <value>
                <fullName>Kansas</fullName>
            </value>
            <value>
                <fullName>Lousiana</fullName>
            </value>
            <value>
                <fullName>Maryland</fullName>
            </value>
            <value>
                <fullName>Michigan</fullName>
            </value>
            <value>
                <fullName>Minnesota</fullName>
            </value>
            <value>
                <fullName>Mississippi</fullName>
            </value>
            <value>
                <fullName>Missouri</fullName>
            </value>
            <value>
                <fullName>Montana</fullName>
            </value>
            <value>
                <fullName>Nebraska</fullName>
            </value>
            <value>
                <fullName>Nevada</fullName>
            </value>
            <value>
                <fullName>New Jersey</fullName>
            </value>
            <value>
                <fullName>New Mexico</fullName>
            </value>
            <value>
                <fullName>New York</fullName>
            </value>
            <value>
                <fullName>North Carolina</fullName>
            </value>
            <value>
                <fullName>North Dakota</fullName>
            </value>
            <value>
                <fullName>Oklahoma</fullName>
            </value>
            <value>
                <fullName>Oregon</fullName>
            </value>
            <value>
                <fullName>Pennsylvania</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>