force-app/main/default/objects/Lead/fields/Admit_Note_Completed_and_Sent__c.field-meta.xml
<CustomField>
    <fullName>Admit_Note_Completed_and_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Admit Note Completed and Sent</label>
    <type>Checkbox</type>
</CustomField>