force-app/main/default/objects/Lead/fields/Admitting_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Admitting_Diagnosis__c</fullName>
    <label>Admitting Diagnosis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>