force-app/main/default/objects/Lead/fields/Advanced_Directive__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Directive__c</fullName>
    <label>Advanced Directive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Has Advance Directives</fullName>
            </value>
            <value>
                <fullName>No Advance Directives</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>