force-app/main/default/objects/Lead/fields/Age_in_current_Stage__c.field-meta.xml
<CustomField>
    <fullName>Age_in_current_Stage__c</fullName>
    <formula>Today()- Last_Status_Change_Date__c</formula>
    <label>Age in current Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>