force-app/main/default/objects/Lead/fields/Anyone_in_the_home_using_drugs_alcohol__c.field-meta.xml
<CustomField>
    <fullName>Anyone_in_the_home_using_drugs_alcohol__c</fullName>
    <label>Anyone in the home using drugs/alcohol?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>