force-app/main/default/objects/Lead/fields/Are_they_secured_locked_up__c.field-meta.xml
<CustomField>
    <fullName>Are_they_secured_locked_up__c</fullName>
    <label>Are they secured/locked up?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Do_you_have_any_weapons_in_your_home__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>