force-app/main/default/objects/Lead/fields/ASAM_Complete__c.field-meta.xml
<CustomField>
    <fullName>ASAM_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BPS Completed</label>
    <type>Checkbox</type>
</CustomField>