force-app/main/default/objects/Lead/fields/ASAM_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>ASAM_Completed_By__c</fullName>
    <label>BPS Completed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>