force-app/main/default/objects/Lead/fields/Aura_Insurance_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Aura_Insurance_Mapping__c</fullName>
    <label>Aura Insurance Mapping</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aetna - OON</fullName>
            </value>
            <value>
                <fullName>Anthem CT</fullName>
            </value>
            <value>
                <fullName>Anthem IN</fullName>
            </value>
            <value>
                <fullName>Anthem ME</fullName>
            </value>
            <value>
                <fullName>Anthem NH</fullName>
            </value>
            <value>
                <fullName>Anthem KY</fullName>
            </value>
            <value>
                <fullName>Anthem VA</fullName>
            </value>
            <value>
                <fullName>Anthem OH</fullName>
            </value>
            <value>
                <fullName>Beacon Health Options -</fullName>
            </value>
            <value>
                <fullName>Cigna - OON</fullName>
            </value>
            <value>
                <fullName>Connecticare (Optum) - OON</fullName>
            </value>
            <value>
                <fullName>CT - All Other Anthem Plans</fullName>
            </value>
            <value>
                <fullName>CT - BCBS of MA</fullName>
            </value>
            <value>
                <fullName>CT - BCBS of RI</fullName>
            </value>
            <value>
                <fullName>CT - Federal (Anthem/BCBS)</fullName>
            </value>
            <value>
                <fullName>FL-All Other Anthem Plans</fullName>
            </value>
            <value>
                <fullName>FL- BCBS of MA</fullName>
            </value>
            <value>
                <fullName>FL-NDBH</fullName>
            </value>
            <value>
                <fullName>Harvard Pilgrim (Optum) - OON</fullName>
            </value>
            <value>
                <fullName>Humana</fullName>
            </value>
            <value>
                <fullName>IN -All Other Anthem</fullName>
            </value>
            <value>
                <fullName>IN - BCBS of MA</fullName>
            </value>
            <value>
                <fullName>IN-Federal (Anthem/BCBS)</fullName>
            </value>
            <value>
                <fullName>KY- BCBS of RI</fullName>
            </value>
            <value>
                <fullName>KY- BCBS of MA</fullName>
            </value>
            <value>
                <fullName>KY- Federal (Anthem/BCBS)</fullName>
            </value>
            <value>
                <fullName>KY-All Other Anthem Plans</fullName>
            </value>
            <value>
                <fullName>MA- All Other Anthem Plans</fullName>
            </value>
            <value>
                <fullName>MA-BCBS of MA</fullName>
            </value>
            <value>
                <fullName>MA- TUFTS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>