force-app/main/default/objects/Lead/fields/Avg_Client_Rev__c.field-meta.xml
<CustomField>
    <fullName>Avg_Client_Rev__c</fullName>
    <label>Avg. Client Rev</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Admissions_Location__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$27,249.44</fullName>
            </value>
            <value>
                <fullName>$26,001.37</fullName>
            </value>
            <value>
                <fullName>$23,817.25</fullName>
            </value>
            <value>
                <fullName>$24,492.33</fullName>
            </value>
            <value>
                <fullName>$21,929.18</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>