force-app/main/default/objects/Lead/fields/Best_Time_To_Call__c.field-meta.xml
<CustomField>
    <fullName>Best_Time_To_Call__c</fullName>
    <label>Best Time To Call</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>