force-app/main/default/objects/Lead/fields/Blank__c.field-meta.xml
<CustomField>
    <fullName>Blank__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blank</label>
    <type>Checkbox</type>
</CustomField>