force-app/main/default/objects/Lead/fields/BPS_Canceled__c.field-meta.xml
<CustomField>
    <fullName>BPS_Canceled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BPS Canceled</label>
    <type>Checkbox</type>
</CustomField>