force-app/main/default/objects/Lead/fields/Caller_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Caller_s_Email__c</fullName>
    <label>Caller&apos;s Email</label>
    <type>Email</type>
</CustomField>