force-app/main/default/objects/Lead/fields/Caller_s_Number__c.field-meta.xml
<CustomField>
    <fullName>Caller_s_Number__c</fullName>
    <label>Caller&apos;s Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>