force-app/main/default/objects/Lead/fields/Callers_Relationship_to_Client__c.field-meta.xml
<CustomField>
    <fullName>Callers_Relationship_to_Client__c</fullName>
    <label>Caller&apos;s Relationship to Client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Sibling</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Other Family</fullName>
            </value>
            <value>
                <fullName>Provider</fullName>
            </value>
            <value>
                <fullName>Institution</fullName>
                <label>Treatment Center</label>
            </value>
            <value>
                <fullName>Lawyer/Legal</fullName>
            </value>
            <value>
                <fullName>Probation/Parole</fullName>
            </value>
            <value>
                <fullName>Sober House</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>