force-app/main/default/objects/Lead/fields/Car_Color__c.field-meta.xml
<CustomField>
    <fullName>Car_Color__c</fullName>
    <label>Car Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>