force-app/main/default/objects/Lead/fields/Car_Color_Make_Model__c.field-meta.xml
<CustomField>
    <fullName>Car_Color_Make_Model__c</fullName>
    <label>Car Color/Make/Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>