force-app/main/default/objects/Lead/fields/Child_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_First_Name__c</fullName>
    <label>Child First Name</label>
    <type>TextArea</type>
</CustomField>