force-app/main/default/objects/Lead/fields/Child_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_Last_Name__c</fullName>
    <label>Child Last Name</label>
    <type>TextArea</type>
</CustomField>