force-app/main/default/objects/Lead/fields/Children__c.field-meta.xml
<CustomField>
    <fullName>Children__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does the Client have children in the household?</inlineHelpText>
    <label>Children?</label>
    <type>Checkbox</type>
</CustomField>