force-app/main/default/objects/Lead/fields/Children_Info__c.field-meta.xml
<CustomField>
    <fullName>Children_Info__c</fullName>
    <label>Children Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>