force-app/main/default/objects/Lead/fields/Client_Address__c.field-meta.xml
<CustomField>
    <fullName>Client_Address__c</fullName>
    <label>Client Address</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>