force-app/main/default/objects/Lead/fields/Client_City__c.field-meta.xml
<CustomField>
    <fullName>Client_City__c</fullName>
    <label>Client City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>