force-app/main/default/objects/Lead/fields/Client_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Client_Date_of_Birth__c</fullName>
    <label>Client Date of Birth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>