force-app/main/default/objects/Lead/fields/Client_Percent_Out_of_Net_Co_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Client_Percent_Out_of_Net_Co_Insurance__c</fullName>
    <label>Client Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>