force-app/main/default/objects/Lead/fields/Client_State__c.field-meta.xml
<CustomField>
    <fullName>Client_State__c</fullName>
    <label>Client State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>