force-app/main/default/objects/Lead/fields/Client_Status__c.field-meta.xml
<CustomField>
    <fullName>Client_Status__c</fullName>
    <label>Client Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>prospect</fullName>
                <default>true</default>
                <label>prospect</label>
            </value>
            <value>
                <fullName>client</fullName>
            </value>
            <value>
                <fullName>discharged</fullName>
            </value>
            <value>
                <fullName>referred</fullName>
            </value>
            <value>
                <fullName>termed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>