force-app/main/default/objects/Lead/fields/Client_Street__c.field-meta.xml
<CustomField>
    <fullName>Client_Street__c</fullName>
    <label>Client Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>