force-app/main/default/objects/Lead/fields/Client_ZipCode__c.field-meta.xml
<CustomField>
    <fullName>Client_ZipCode__c</fullName>
    <label>Client ZipCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>