force-app/main/default/objects/Lead/fields/Clinical_Clearance_Complete__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Clearance_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clinical Clearance Complete</label>
    <type>Checkbox</type>
</CustomField>