force-app/main/default/objects/Lead/fields/Compulsive_Behaviors__c.field-meta.xml
<CustomField>
    <fullName>Compulsive_Behaviors__c</fullName>
    <label>Compulsive Behaviors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gambling</fullName>
            </value>
            <value>
                <fullName>Video Games</fullName>
            </value>
            <value>
                <fullName>Sex</fullName>
            </value>
            <value>
                <fullName>Shopping</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>