force-app/main/default/objects/Lead/fields/Compulsive_Behaviors_Other__c.field-meta.xml
<CustomField>
    <fullName>Compulsive_Behaviors_Other__c</fullName>
    <label>Compulsive Behaviors Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>