force-app/main/default/objects/Lead/fields/Contact_Type_AURA__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type_AURA__c</fullName>
    <label>Contact Type AURA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dentist</fullName>
            </value>
            <value>
                <fullName>Disability</fullName>
            </value>
            <value>
                <fullName>Drug &amp; Alcohol Treatment Center</fullName>
            </value>
            <value>
                <fullName>EAP</fullName>
            </value>
            <value>
                <fullName>Educational Consultant</fullName>
            </value>
            <value>
                <fullName>Employer</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Family Systems Therapist</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Health Care Professional</fullName>
            </value>
            <value>
                <fullName>Insurance Provider</fullName>
            </value>
            <value>
                <fullName>Interventionist</fullName>
            </value>
            <value>
                <fullName>Legal Organization</fullName>
            </value>
            <value>
                <fullName>Medical Records</fullName>
            </value>
            <value>
                <fullName>Nutritionist/Dietician</fullName>
            </value>
            <value>
                <fullName>Other Organization</fullName>
            </value>
            <value>
                <fullName>Payor</fullName>
            </value>
            <value>
                <fullName>Physician</fullName>
            </value>
            <value>
                <fullName>Probation Officer</fullName>
            </value>
            <value>
                <fullName>Provider</fullName>
            </value>
            <value>
                <fullName>Referent</fullName>
            </value>
            <value>
                <fullName>School</fullName>
            </value>
            <value>
                <fullName>Therapist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>