force-app/main/default/objects/Lead/fields/Contract_Payer__c.field-meta.xml
<CustomField>
    <fullName>Contract_Payer__c</fullName>
    <label>Contract Payer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anthem</fullName>
                <default>true</default>
                <label>Anthem</label>
            </value>
            <value>
                <fullName>Oxford</fullName>
            </value>
            <value>
                <fullName>Private Pay</fullName>
            </value>
            <value>
                <fullName>Tufts</fullName>
            </value>
            <value>
                <fullName>BCBS of MA</fullName>
            </value>
            <value>
                <fullName>Florida Blue</fullName>
            </value>
            <value>
                <fullName>Private Pay ($$$$)</fullName>
            </value>
            <value>
                <fullName>Commercial Carrier</fullName>
                <isActive>false</isActive>
                <label>BCBS Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>