force-app/main/default/objects/Lead/fields/Contract_Value1__c.field-meta.xml
<CustomField>
    <fullName>Contract_Value1__c</fullName>
    <label>Contract Value</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Contract_Payer__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>36,018</fullName>
            </value>
            <value>
                <fullName>40,020</fullName>
            </value>
            <value>
                <fullName>37,962</fullName>
            </value>
            <value>
                <fullName>34,950</fullName>
            </value>
            <value>
                <fullName>55,000</fullName>
            </value>
            <value>
                <fullName>78,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>