force-app/main/default/objects/Lead/fields/Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Contract_Value__c</fullName>
    <defaultValue>37962</defaultValue>
    <label>Contract Value x</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>