force-app/main/default/objects/Lead/fields/Conversion_Predictor__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Predictor__c</fullName>
    <label>Conversion Predictor</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>