force-app/main/default/objects/Lead/fields/Coverage__c.field-meta.xml
<CustomField>
    <fullName>Coverage__c</fullName>
    <label>Coverage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>