force-app/main/default/objects/Lead/fields/Coverage_End_Date_AURA__c.field-meta.xml
<CustomField>
    <fullName>Coverage_End_Date_AURA__c</fullName>
    <label>Coverage End Date</label>
    <type>Date</type>
</CustomField>