force-app/main/default/objects/Lead/fields/Coverage_Start_Date_AURA__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Start_Date_AURA__c</fullName>
    <label>Coverage Start Date</label>
    <type>Date</type>
</CustomField>