force-app/main/default/objects/Lead/fields/Create_Insurance_Verified__c.field-meta.xml
<CustomField>
    <fullName>Create_Insurance_Verified__c</fullName>
    <formula>(Time_Stamp_Insurance_verification__c) -   DATEVALUE(DATETIMEVALUE(CreatedDate))</formula>
    <label>1 Create &lt;&gt; Insurance Verified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>