force-app/main/default/objects/Lead/fields/Current_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Current_Doctor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Doctor?</label>
    <type>Checkbox</type>
</CustomField>