force-app/main/default/objects/Lead/fields/Current_Medications_Dosage__c.field-meta.xml
<CustomField>
    <fullName>Current_Medications_Dosage__c</fullName>
    <label>Current Medications/Dosage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>