force-app/main/default/objects/Lead/fields/Current_Psychiatrist__c.field-meta.xml
<CustomField>
    <fullName>Current_Psychiatrist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Psychiatrist?</label>
    <type>Checkbox</type>
</CustomField>