force-app/main/default/objects/Lead/fields/Current_Therapist__c.field-meta.xml
<CustomField>
    <fullName>Current_Therapist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Therapist?</label>
    <type>Checkbox</type>
</CustomField>