force-app/main/default/objects/Lead/fields/Current_Therapist_Info__c.field-meta.xml
<CustomField>
    <fullName>Current_Therapist_Info__c</fullName>
    <label>Current Therapist Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>