force-app/main/default/objects/Lead/fields/Designated_Power_of_Attorney_in_Place__c.field-meta.xml
<CustomField>
    <fullName>Designated_Power_of_Attorney_in_Place__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Designated Power of Attorney in Place?</label>
    <type>Checkbox</type>
</CustomField>