force-app/main/default/objects/Lead/fields/Designated_Power_of_Attorney_Info__c.field-meta.xml
<CustomField>
    <fullName>Designated_Power_of_Attorney_Info__c</fullName>
    <label>Designated Power of Attorney Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>