force-app/main/default/objects/Lead/fields/Diagnosed_Eating_Disorder__c.field-meta.xml
<CustomField>
    <fullName>Diagnosed_Eating_Disorder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Diagnosed Eating Disorder?</label>
    <type>Checkbox</type>
</CustomField>