force-app/main/default/objects/Lead/fields/Diagnosed_Learning_Disorder__c.field-meta.xml
<CustomField>
    <fullName>Diagnosed_Learning_Disorder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Diagnosed Learning Disorder?</label>
    <type>Checkbox</type>
</CustomField>