force-app/main/default/objects/Lead/fields/Diagnosed_Learning_Disorder_Info__c.field-meta.xml
<CustomField>
    <fullName>Diagnosed_Learning_Disorder_Info__c</fullName>
    <label>Diagnosed Learning Disorder Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>